@@ -46,6 +46,10 @@ class PDF::Function
             min($r.max, max($r.min, $v));
         }
 
+        method interpolate($x, Range \X, Range \Y) {
+            Y.min + ($x - X.min) * (Y.max - Y.min) / (X.max - X.min);
+        }
+
     }
 
     method cb-init {
