@@ -2,6 +2,8 @@ Release 0.0.7
 Add PDF function calculator methods:
 - Add PDF::Function::PostScript.calc
 - Add PDF::Function::Sampled.calc
+- Add PDF::Function::Exponential.calc
+- Add PDF::Function::Stitching.calc
 Release 0.0.6
 - Fix PDF::Page.Annots accessor. Now coerces fields to PDF::Field
 Release 0.0.5
